Ensured island padding is based on base line height rather than arbitary spacing. Closes #106

--- a/assets/css/master-ie.css
+++ b/assets/css/master-ie.css
@@ -1042,7 +1042,7 @@ select[size="1"] {
   select,
   select[size="0"],
   select[size="1"] {
-    background-image: url('../images/select_arrow.png?1376992239');
+    background-image: url('../images/select_arrow.png?1376993279');
     background-repeat: no-repeat;
     background-position: right center;
     padding-right: 20px;
@@ -1690,7 +1690,7 @@ optgroup::-moz-focus-inner {
 
 /* line 20, ../sass/framework/partials/objects/_island.scss */
 .island, .headed-island {
-  padding: 15px 30px;
+  padding: 1.666em;
 }
 
 /* line 25, ../sass/framework/partials/objects/_island.scss */
@@ -1708,7 +1708,7 @@ optgroup::-moz-focus-inner {
 */
 /* line 38, ../sass/framework/partials/objects/_island.scss */
 .islet {
-  padding: 15px;
+  padding: 0.833em;
 }
 
 /* ##Headed Island */
@@ -1732,14 +1732,14 @@ optgroup::-moz-focus-inner {
 }
 /* line 63, ../sass/framework/partials/objects/_island.scss */
 .headed-island .island-heading {
-  padding: 15px 30px;
+  padding: 0.833em 1.666em;
   margin: 0;
   border-top: 0;
   border-bottom: 1px solid #ccc;
 }
 /* line 70, ../sass/framework/partials/objects/_island.scss */
 .headed-island .island-content {
-  padding: 15px 30px;
+  padding: 0.833em 1.666em;
 }
 /* line 73, ../sass/framework/partials/objects/_island.scss */
 .headed-island .island-content > :last-child {
@@ -3112,7 +3112,7 @@ html[xmlns] .slides {
   position: relative;
   background-repeat: no-repeat;
   background-position: 0 0;
-  background-image: url('../images/site-logo.png?1376992239');
+  background-image: url('../images/site-logo.png?1376993279');
   width: 200px;
   height: 80px;
 }
@@ -3151,18 +3151,18 @@ html[xmlns] .slides {
 }
 /* line 18, ../sass/framework/partials/common/_site-credit.scss */
 .no-svg .site-credit {
-  background-image: url('../images/site-credit.png?1376992239');
+  background-image: url('../images/site-credit.png?1376993279');
   width: 62px;
   height: 20px;
 }
 
 /* line 25, ../sass/framework/partials/common/_site-credit.scss */
 .site-credit--dark {
-  background-image: url('../images/site-credit--dark.svg?1376992239');
+  background-image: url('../images/site-credit--dark.svg?1376993279');
 }
 /* line 28, ../sass/framework/partials/common/_site-credit.scss */
 .no-svg .site-credit--dark {
-  background-image: url('../images/site-credit--dark.png?1376992239');
+  background-image: url('../images/site-credit--dark.png?1376993279');
 }
 
 /* ==========================================================================
@@ -3361,7 +3361,7 @@ html[xmlns] .slides {
   *vertical-align: auto;
   zoom: 1;
   *display: inline;
-  background: url('../images/social-actions-sprite.png?1376992239') no-repeat 0 0;
+  background: url('../images/social-actions-sprite.png?1376993279') no-repeat 0 0;
   width: 60px;
   height: 20px;
   text-indent: 0 !important;
